# kiny

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  package.json
docs/reference/: engine-analyze-spec.md  engine-ast-spec.md  engine-cli-spec.md  engine-m1-design.md  engine-packaging-spec.md  engine-parser-spec.md  engine-rawblock-spec.md  engine-runtime-spec.md  kin_spec_draft.md
editor/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
editor/src/: App.test.tsx  App.tsx  clipboard.ts  contextMenuGuard.test.ts  contextMenuGuard.ts  main.tsx  styles.css  test-setup.ts  vite-env.d.ts
editor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: kip.rs  lib.rs  webpage.rs
engine/: package-lock.json  package.json  tsconfig.build.json  tsconfig.json
engine/src/: index.test.ts  index.ts
player/: package-lock.json  package.json  tsconfig.build.json
player/src/: index.ts  styles.css
reader/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
reader/src/: App.test.tsx  App.tsx  main.tsx  styles.css  test-setup.ts  types.ts
reader/src-tauri/: Cargo.toml  tauri.conf.json
reader/src-tauri/capabilities/: default.json
reader/src-tauri/icons/: icon.icns
reader/src-tauri/src/: kip.rs  lib.rs
samples/雾港之夜/: kiny.json
scripts/: build-release.mjs  stage-sample.test.mjs
scripts/public/: build-export-template.mjs  build-release.mjs  stage-kin-spec.mjs  stage-sample.mjs
web-reader/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web-reader/scripts/: gen-demo-assets.mjs
web-reader/src/: App.test.tsx  App.tsx  main.tsx  smoke.test.ts  styles.css  test-setup.ts
(+245 files in other folders)
