[package]
name = "app"
version = "0.3.0"
description = "Kiny story reader — a Tauri 2 shell that reads .kip story packages"
authors = ["firzencode <firzencode@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/firzencode/kiny"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
zip = "2"
uuid = { version = "1", features = ["v4"] }
